Add copiright in the footer

--- a/index.html
+++ b/index.html
@@ -83,6 +83,22 @@
           <button class="btn btn__call--action">Sign up</button>
         </div>
       </div>
+      <div class="copyright">
+        <p>
+          Copyright © Kire Zdraveski
+          <a
+            href="https://github.com/kire21?tab=repositories"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fab fa-github github"></i
+          ></a>
+        </p>
+      </div>
     </footer>
+
+    <script
+      src="https://kit.fontawesome.com/198b8517c3.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
